test/sema/member_instantiation_dataflow.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32,
  y: i32,
}

fn main() -> void {
  let n: i32;

  let y = S { 
    x: 1, 
    y: n,
    // CHECK: [[# @LINE - 1 ]]:8: error: 'n' is not initialized
  };
}
